# first-course

./: README.md  pyproject.toml
dz_4/: main.py  pyproject.toml
lesson_1/: new.py
lesson_6/example_joke/: pyproject.toml
lesson_6/palindrome/: main.py
topic_3/: main.py  pyproject.toml  re_4.py  tack10.py  tack3_math.py  tack5_file.py  tack8.py  tack9.py  tack_4.py  tack_6.py  time.py
