[tool.poetry]
name = "topic-3"
version = "0.1.0"
description = ""
authors = ["bobantonbob <130400459+bobantonbob@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mymodule = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
